<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Menu item without a sub menu. -->
    <item
        android:id="@+id/menu_designer"
        android:title="@string/menu_designer"
        />
    <!-- Menu item with a sub menu. -->
    <item
        android:id="@+id/menu_coder"
        android:title="@string/menu_coder">
        <menu>
            <item
                android:id="@+id/menu_coder1"
                android:title="@string/menu_coder1"
                />
            <item
                android:id="@+id/menu_coder2"
                android:title="@string/menu_coder2"
                />
            <item
                android:id="@+id/menu_coder3"
                android:title="@string/menu_coder3"
                />
            <item
                android:id="@+id/menu_coder4"
                android:title="@string/menu_coder4"
                />
            <item
                android:id="@+id/menu_coder5"
                android:title="@string/menu_coder5"
                />
        </menu>
    </item>
    <!-- Menu item without a sub menu. -->
    <item
        android:id="@+id/menu_product"
        android:title="@string/menu_product"
        />
</menu>
