<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <view
        class="com.shyber.glass.sample.apidemo.touchpad.TouchpadView"
        android:id="@+id/touchpad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/touchpad_background_color" >
        <requestFocus />
    </view>

    <TextView
        android:id="@+id/scroll_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/touchpad"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:text="@string/scrolling"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/scroll_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/scroll_type_label"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_divider_height"
        android:layout_below="@+id/scroll_type_label"
        android:layout_marginTop="@dimen/table_divider_margin"
        android:layout_marginBottom="@dimen/table_divider_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/displacement_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divider1"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/displacement"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/displacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/displacement_label"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_divider_height"
        android:layout_below="@+id/displacement_label"
        android:layout_marginTop="@dimen/table_divider_margin"
        android:layout_marginBottom="@dimen/table_divider_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/delta_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divider2"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/delta"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delta_label"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_divider_height"
        android:layout_below="@+id/delta_label"
        android:layout_marginTop="@dimen/table_divider_margin"
        android:layout_marginBottom="@dimen/table_divider_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/velocity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divider3"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/velocity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/velocity_label"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
